Merged revisions 6095-6639 via svnmerge from https://svn.terracotta.org/repo/tc/dso/branches/2.5